--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0"
   }
 }
